<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_primary"
    android:padding="@dimen/screen_padding"
    tools:context=".ui.notifications.NotificationsFragment">

    <include
        android:id="@+id/notificationsHeader"
        layout="@layout/include_albers_header" />

    <TextView
        android:id="@+id/notificationsTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2xl"
        android:text="@string/notifications"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_lg"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/clearNotificationsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationsHeader" />

    <TextView
        android:id="@+id/clearNotificationsButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/control_height_small"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/clear_notification"
        android:textColor="@color/status_error"
        android:textSize="@dimen/text_body"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/notificationsTitleText"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notificationsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_xl"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="@dimen/notification_bottom_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationsTitleText"
        tools:listitem="@layout/item_notifications" />

    <TextView
        android:id="@+id/emptyNotificationsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_notification_history_yet"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/text_heading"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationsTitleText"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="@dimen/icon_action"
        android:layout_height="@dimen/icon_action"
        android:alpha="1"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
