<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_screen_primary"
    android:fillViewport="true"
    tools:context=".ui.connect.ConnectFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/screen_min_height"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <include
            android:id="@+id/startHeader"
            layout="@layout/include_albers_header" />

        <LinearLayout
            android:id="@+id/startPowerRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/startHeader">

            <ImageView
                android:id="@+id/deviceStateText"
                android:layout_width="@dimen/icon_power"
                android:layout_height="@dimen/icon_power"
                android:layout_marginEnd="@dimen/space_power_gap"
                android:alpha="0.2"
                android:src="@drawable/ic_scan_button"
                android:scaleType="centerInside"
                android:clickable="true" />

            <ImageView
                android:id="@+id/stopButton"
                android:layout_width="@dimen/icon_power"
                android:layout_height="@dimen/icon_power"
                android:layout_marginStart="@dimen/space_power_gap"
                android:alpha="0.2"
                android:src="@drawable/ic_start_stop_button"
                android:scaleType="centerInside"
                android:enabled="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/controlPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3xl"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/card_padding"
            app:layout_constraintTop_toBottomOf="@+id/startPowerRow">

            <TextView
                android:id="@+id/timerText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/control_height_xlarge"
                android:layout_marginTop="@dimen/space_sm"
                android:gravity="center"
                android:text="--:--:--"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dashboardCountdownLabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/automatic_pump_cycle_countdown"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/timerOverrideButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/control_height"
                android:layout_marginTop="@dimen/space_control_gap"
                android:enabled="false"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/timer_override"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/pumpNowButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/control_height"
                android:layout_marginTop="@dimen/space_md"
                android:background="@drawable/bg_timer_window"
                android:enabled="false"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/pump_now"
                android:textColor="@color/white" />

            <include
                android:id="@+id/dashboardBottomNav"
                layout="@layout/include_bottom_nav_disconnected" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
